Fixed overflow del titulo en las cards de receta y ingrediente

--- a/src/css/IngredienteCard.css
+++ b/src/css/IngredienteCard.css
@@ -8,6 +8,7 @@
   text-align: start;
   background-color: white;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
 }
 
 .card img {
@@ -17,6 +18,12 @@
   border-radius: 10px;
   aspect-ratio: 1 / 1;
   object-fit: cover;
+}
+
+.card-nombre {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 150px;
 }
 
 .divider-horizontal {
